--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Proof of Concept</title>
 
-    <script src="index.js"></script>
+    <script src="index.js" type="module"></script>
     <link rel="stylesheet" href="index.css"/>
 
       <!--Init Google Maps-->
@@ -19,5 +19,26 @@
     <div class="bottom-bar">
 
     </div>
+
+    <script type="module">
+      // Import the functions you need from the SDKs you need
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.6/firebase-app.js";
+      // TODO: Add SDKs for Firebase products that you want to use
+      // https://firebase.google.com/docs/web/setup#available-libraries
+    
+      // Your web app's Firebase configuration
+      const firebaseConfig = {
+        apiKey: "AIzaSyBPtH7jVN4wNCKOyUf6p4QfpX3UQXDydZ4",
+        authDomain: "publicrestroomlocator.firebaseapp.com",
+        databaseURL: "https://publicrestroomlocator-default-rtdb.firebaseio.com",
+        projectId: "publicrestroomlocator",
+        storageBucket: "publicrestroomlocator.appspot.com",
+        messagingSenderId: "660860024187",
+        appId: "1:660860024187:web:9439b3959865ffd80eb9de"
+      };
+    
+      // Initialize Firebase
+      const app = initializeApp(firebaseConfig);
+    </script>
 </body>
 </html>
