Seperated maps API from Firebase scripts

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Proof of Concept</title>
 
-    <script src="index.js" type="module"></script>
+    <script src="index.js"></script>
+    <script src="fireBaseInit.js" type="module"></script>
     <link rel="stylesheet" href="index.css"/>
 
       <!--Init Google Maps-->
