--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <title>Proof of Concept</title>
 
-    <script src="index.js"></script>
-    <script src="fireBaseInit.js" type="module"></script>
+    <script src="JS/fireBaseInit.js" type="module"></script>
+    <script src="JS/index.js"></script>
+    <script src="JS/sucessLocationMapper.js"></script>
     <link rel="stylesheet" href="index.css"/>
 
       <!--Init Google Maps-->
