Moved sidebar with bezels to the left over map

--- a/index.html
+++ b/index.html
@@ -16,10 +16,7 @@
     ></script>
 </head>
 <body>
-    <div id="map"></div>
-
-    <div class="bottom-bar">
-
-    </div>
+  <div id="map"></div>
+  <div class="side-bar"></div>
 </body>
 </html>
