--- a/index.html
+++ b/index.html
@@ -17,6 +17,26 @@
 </head>
 <body>
   <div id="map"></div>
-  <div class="side-bar"></div>
+
+  <div class="sidebar">
+    <div class="sidebar-container">
+
+      <div class="bth">Test1</div>
+      <div class="bth">Test2</div>
+      <div class="bth">Test3</div>
+      <div class="bth">Test4</div>
+      <div class="bth">Test5</div>
+      <div class="bth">Test6</div>
+      <div class="bth">Test7</div>
+      <div class="bth">Test8</div>
+      <div class="bth">Test9</div>
+      <div class="bth">Test10</div>
+      <div class="bth">Test11</div>
+      <div class="bth">Test12</div>
+      <div class="bth">Test13</div>
+
+
+    </div>
+  </div>
 </body>
 </html>
