Populated sidebar with items by generating HTML elements with their index in the db

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 
     <script src="src/JS/fireBaseInit.js" type="module"></script>
     <script src="src/JS/index.js"></script>
-    <script src="src/JS/sucessLocationMapper.js"></script>
     <link rel="stylesheet" href="index.css"/>
 
       <!--Init Google Maps-->
@@ -16,25 +15,12 @@
     ></script>
 </head>
 <body>
+  <script src="src/JS/sucessLocationMapper.js"></script>
+
   <div id="map"></div>
 
   <div class="sidebar">
-    <div class="sidebar-container">
-
-      <div class="bth">Test1</div>
-      <div class="bth">Test2</div>
-      <div class="bth">Test3</div>
-      <div class="bth">Test4</div>
-      <div class="bth">Test5</div>
-      <div class="bth">Test6</div>
-      <div class="bth">Test7</div>
-      <div class="bth">Test8</div>
-      <div class="bth">Test9</div>
-      <div class="bth">Test10</div>
-      <div class="bth">Test11</div>
-      <div class="bth">Test12</div>
-      <div class="bth">Test13</div>
-
+    <div class="sidebar-container" id="sidebar-container">
 
     </div>
   </div>
